--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li data-role='list-divider'>Origen</li>
                     <li>
                         <label for="origen">Escriba el Origen </label>
-                        <input type="text" data-clear-btn="true" name="origen" id="origen" value="Av San Martín 610, Mendoza, Argentina" placeholder="Calle N°, Departamento"/>
+                        <input type="text" data-clear-btn="true" name="origen" id="origen" value="Seru 351, Mendoza, Argentina" placeholder="Calle N°, Departamento"/>
                         <div><ul id="ulOrigen" data-role="listview" data-inset="true"></ul></div>
                     </li>
                     <li>
