--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head> 
         <title>Colectivos</title> 
         <meta charset="utf-8"> 
-        <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+        <meta name="format-detection" content="telephone=no" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" href="css/colectivos.css" />
         <link rel="stylesheet" href="css/jquery.mobile-1.3.2.min.css" />
         <link rel="stylesheet" href="css/jqm-icon-pack-3.0.0-fa.css" />
-        <script src="cordova.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
         <script src="http://maps.google.com/maps/api/js?libraries=places&sensor=true" type="text/javascript"></script>
         <script src="js/jquery-1.10.2.min.js"></script>
         <script src="js/init.js"></script>
@@ -23,7 +24,7 @@
             <div data-role="content">
                 <div class="botonesCentrados">
                     <a href="#origenPage" data-role="button" id="btnBuscar" data-mini="false">¿Cómo voy?</a>
-                    <a href="#grupoPage" data-role="button" data-mini="true">Todos los Recorridos</a>
+                    <a href="#grupoPage" data-role="button">Todos los Recorridos</a>
                     <a href="#" data-role="button" id="btnSalir" data-mini="true">Salir</a>
                 </div>
 
